[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/SceneDifficulty.gd" type="Script" id=1]
[ext_resource path="res://Assets/background2.png" type="Texture" id=2]
[ext_resource path="res://Assets/font64.tres" type="DynamicFont" id=3]

[node name="SceneDifficulty" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "custom_constants" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -225.0
margin_right = 400.0
margin_bottom = 225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 800.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Choose Difficulty"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ButtonEasy" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 800.0
margin_bottom = 217.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Easy"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="ButtonNormal" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 227.0
margin_right = 800.0
margin_bottom = 311.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Normal"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="ButtonHard" type="Button" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 321.0
margin_right = 800.0
margin_bottom = 405.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Hard"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="VBoxContainer/ButtonEasy" to="." method="_on_ButtonEasy_pressed"]

[connection signal="pressed" from="VBoxContainer/ButtonNormal" to="." method="_on_ButtonNormal_pressed"]

[connection signal="pressed" from="VBoxContainer/ButtonHard" to="." method="_on_ButtonHard_pressed"]


